# grw

./: .gitignore  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html
emacs/: grw-mode.el  grw_dot.rs
emacs/dot/: ir.rs  mod.rs  parse.rs  render.rs
emacs/trace/: trace.rs
scratch/: tmp.rs
scratch/any/: neg_val_multi_slot.rs
scratch/basics/ban/: dir_ban_chain.rs  (+5 more)
src/: lib.rs
src/graph/: batch.rs  collections.rs  edge.rs  error.rs  layout.rs  mod.rs  node.rs  persist.rs  tests.rs  watcher.rs
src/modify/: apply.rs  error.rs  mod.rs  tests.rs
src/search/: error.rs  mod.rs
src/test/: sample.rs
tests/: chaos.rs  chaos_v2.rs  early_fail.rs  epi.rs  harness.rs  negation_parity.rs  par_correctness.rs  parity.rs  replay_chaos.rs  v3_targeted.rs
tests/compile_fail/: anon_edge_dir_no_val_no_default.rs  anon_edge_shl_no_val_no_default.rs  anon_edge_undir_no_val_no_default.rs  dir_bitxor.rs  dir_explicit_edge_bitxor.rs  exist_edge_to_new_ref_dir.rs  exist_edge_to_new_ref_undir.rs  exist_edge_to_new_target_dir.rs  exist_edge_to_new_val_target.rs  explicit_edge_no_val_no_default.rs  explicit_edge_shl_no_val_no_default.rs  explicit_edge_shr_no_val_no_default.rs  neg_context_bare.rs  neg_node_positive_edge.rs  new_node_no_val_no_default.rs  new_node_no_val_no_default_in_chain.rs  new_node_rhs_no_val_no_default.rs  new_source_exist_edge_dir.rs  new_source_exist_edge_undir.rs  new_source_remove_edge_dir.rs  remove_edge_to_new_target.rs  undir_explicit_edge_shl.rs  undir_explicit_edge_shr.rs  undir_shl.rs  undir_shr.rs
tests/perf/: prof_search.rs
(+168 files in other folders)
